@@ -1,3 +1,8 @@
+2006-02-26  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-metadata-musicbrainz.c:
+	Don't cache the metadata, it breaks too much.
+
 2006-02-22  Ross Burton  <ross@burtonini.com>
 
 	* data/Makefile.am:
